<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:iconTint="@color/black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_deskripsi"
        android:icon="@drawable/deskripsi"
        android:title="@string/title_deskripsi" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scan"
        android:title="@string/title_scan"/>

    <item
        android:id="@+id/navigation_price"
        android:icon="@drawable/price"
        android:title="@string/title_price"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_info"
        android:title="@string/title_profile"/>

</menu>