<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.beras_ai.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_deskripsi"
        android:name="com.example.beras_ai.ui.deskripsi.DeskripsiFragment"
        android:label="@string/title_deskripsi"
        tools:layout="@layout/fragment_deskripsi" />

    <fragment
        android:id="@+id/navigation_price"
        android:name="com.example.beras_ai.ui.price.PriceFragment"
        android:label="@string/title_price"
        tools:layout="@layout/fragment_price" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.beras_ai.ui.info.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>