<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/price_fragment"
    android:background="@android:color/white"
    tools:context=".ui.price.PriceFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@color/green1"
            android:alpha="0.5"
            android:scaleType="fitXY"
            android:contentDescription="@string/background" />
    </FrameLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_hargaa"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/CustomtextStyle3"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_price"
        android:layout_marginTop="10dp"
        android:layout_below="@id/title"
        android:textAppearance="@style/CustomtextStyle1"
        android:gravity="center"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_below="@id/title"
        android:background="@drawable/bg_rounded_rect"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="35dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvProvinsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/provinsi"
            android:textColor="@color/black"
            android:textAppearance="@style/CustomtextStyle3" />

        <TextView
            android:id="@+id/tvHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:textColor="@color/black"
            android:textAppearance="@style/CustomtextStyle3" />

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListKonten"
            android:layout_width="match_parent"
            android:layout_height="502dp" />

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

</RelativeLayout>