<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.info.AboutActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tentang"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:textAppearance="@style/CustomtextStyle3"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/female"
                        android:layout_gravity="center"
                        android:contentDescription="@string/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apa_itu_beras_ai"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="15dp"
                        android:textAppearance="@style/CustomtextStyle3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_about"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:textAppearance="@style/CustomtextStyle1"
                        android:justificationMode="inter_word"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pengembang"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="15dp"
                        android:textAppearance="@style/CustomtextStyle3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:textAppearance="@style/CustomtextStyle1"
                        android:justificationMode="inter_word"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/versi"
                        android:textColor="@color/black"
                        android:layout_marginTop="60dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        android:textAppearance="@style/CustomtextStyle1" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>