<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:id="@+id/scan_fragment"
    tools:context=".ui.scan.ScanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mOpsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/opsi_title"
            android:textColor="@color/yellow2"
            android:textAppearance="@style/CustomtextStyle2"/>

        <TextView
            android:id="@+id/mDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/desc_opsi"
            android:textColor="@color/black"
            android:textAppearance="@style/CustomtextStyle1"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_camera"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:background="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:focusable="true">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_camera"
                app:tint="@color/green3"
                android:contentDescription="@string/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_camera"
                android:textAppearance="@style/CustomtextStyle3"
                android:textColor="@color/green3"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_gallery"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_galeri"
                app:tint="@color/green3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/from_pic"
                android:textAppearance="@style/CustomtextStyle3"
                android:textColor="@color/green3" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_round_yellow"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/note"
            android:textAppearance="@style/CustomtextStyle1"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>
