<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detection.GaleriActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/mGalleryButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/pilih_gambar"
            android:textAppearance="@style/CustomtextStyle1"
            android:background="@drawable/background_round_yellow" />

        <ImageView
            android:id="@+id/mPhotoImageView"
            android:layout_width="330dp"
            android:layout_height="400dp"
            android:src="@drawable/image2"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/gambar" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/mDetectButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="210dp"
            android:layout_gravity="center"
            android:clickable="true"
            app:cardBackgroundColor="@color/green2"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:focusable="true">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_search"
                app:tint="@android:color/white"
                android:contentDescription="@string/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deteksi"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/CustomtextStyle1"
                android:textColor="@color/white"
                android:layout_gravity="center|bottom"/>


        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="580dp"
            android:background="@drawable/bg_rounded_rect"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHasilPrediksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/kualitas"
                    android:layout_gravity="center"
                    android:textColor="@color/yellow2"
                    android:textAppearance="@style/CustomtextStyle3"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/green3"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/mResultTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:padding="8dp"
                        android:text="@string/hasil"
                        android:layout_gravity="center"
                        android:textAppearance="@style/CustomtextStyle1"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</RelativeLayout>