<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvListMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="10dp"
    android:clickable="false"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/namaa_tengkulak"
                android:textColor="@color/black"
                android:textAppearance="@style/CustomtextStyle3" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:maxLines="3"
                android:text="@string/lorem"
                android:textColor="@color/black"
                android:textAppearance="@style/CustomtextStyle1" />

            <Button
                android:id="@+id/btPhone"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_text"
                android:drawableEnd="@drawable/ic_arrow_forward"
                android:maxLines="1"
                android:text="@string/button_hubungi"
                android:textAppearance="@style/CustomtextStyle1" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>